--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
@@ -122,6 +121,5 @@ dist
 .env.test.local
 .env.production.local
 
-npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+.idea
